Fixed header to align text without flexbox

--- a/assignment/style.css
+++ b/assignment/style.css
@@ -8,9 +8,7 @@ body {
 .banner {
     background-color: darkcyan;
     color: lightcoral;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    text-align: center;
 }
 
 .content {
